@@ -272,7 +272,7 @@ setClass("Param",
          contains = c("Versioned"))
 setClassUnion("ParamOrNULL", c("Param", "NULL"))
 
-#' @aliases GenericParam
+#' @aliases GenericParam Param class:Param Param-class
 #'
 #' @title Generic parameter class
 #'
@@ -484,11 +484,11 @@ NULL
 #' @param roiScales Optional numeric vector with length equal to \code{roiList}
 #'     defining the scale for each region of interest in \code{roiList} that
 #'     should be used for the centWave-wavelets.
-#'     
-#' @param extendLengthMSW Option to force centWave to use all scales when 
+#'
+#' @param extendLengthMSW Option to force centWave to use all scales when
 #' running centWave rather than truncating with the EIC length. Uses the "open"
-#' method to extend the EIC to a integer base-2 length prior to being passed to 
-#' \code{convolve} rather than the default "reflect" method. See 
+#' method to extend the EIC to a integer base-2 length prior to being passed to
+#' \code{convolve} rather than the default "reflect" method. See
 #' https://github.com/sneumann/xcms/issues/445 for more information.
 #'
 #' @details
