@@ -109,10 +109,10 @@ generated visualizing the identified chromatographic peak. Note: this
 argument is for backward compatibility only and will be removed in
 future.}
 
-\item{extendLengthMSW}{Option to force centWave to use all scales when 
+\item{extendLengthMSW}{Option to force centWave to use all scales when
 running centWave rather than truncating with the EIC length. Uses the "open"
-method to extend the EIC to a integer base-2 length prior to being passed to 
-\code{convolve} rather than the default "reflect" method. See 
+method to extend the EIC to a integer base-2 length prior to being passed to
+\code{convolve} rather than the default "reflect" method. See
 https://github.com/sneumann/xcms/issues/445 for more information.}
 }
 \value{
