@@ -152,10 +152,10 @@ intensity peaks.}
 Currently not used, but has to be \code{"positive"}, \code{"negative"} or
 \code{"unknown"} if provided.}
 
-\item{extendLengthMSW}{Option to force centWave to use all scales when 
+\item{extendLengthMSW}{Option to force centWave to use all scales when
 running centWave rather than truncating with the EIC length. Uses the "open"
-method to extend the EIC to a integer base-2 length prior to being passed to 
-\code{convolve} rather than the default "reflect" method. See 
+method to extend the EIC to a integer base-2 length prior to being passed to
+\code{convolve} rather than the default "reflect" method. See
 https://github.com/sneumann/xcms/issues/445 for more information.}
 
 \item{peaks.}{A matrix or \code{xcmsPeaks} object such as one returned by
